@@ -863,6 +863,9 @@ Release 0.20.0 - Unreleased
     HADOOP-5585. Clear FileSystem statistics between tasks when jvm-reuse
     is enabled. (omalley)
 
+    HADOOP-5394. JobTracker might schedule 2 attempts of the same task 
+    with the same attempt id across restarts. (Amar Kamat via sharad)
+
 Release 0.19.2 - Unreleased
 
   BUG FIXES
